--- a/pulsenotebook.ipynb
+++ b/pulsenotebook.ipynb
@@ -36,23 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Session' object has no attribute 'createreport'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-8de9fd495d8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreatereport\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256283\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Session' object has no attribute 'createreport'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "thesurvey = "
+    "#https://stackoverflow.com/questions/49016451/how-to-add-multiple-columns-to-a-dataframe/49016606?noredirect=1#comment85039098_49016606"
    ]
   },
   {
@@ -92677,6 +92665,65 @@
     "def add_total(a, b):\n",
     "        return a + b\n",
     "df_test[['cat1tot']] = df_test['cat1a', 'cat1b']].apply(add_total,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dft = pd.DataFrame({'col1' : [12,3,4,5,'a',5], 'col2' : [1,5,'b',6,10,1]})\n",
+    "tots = dft.sum(axis=0, numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-59-4ccddf40429b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-4ccddf40429b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for each t in tots: print(tot)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each t in tots: print(tot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tots = dft.apply(pd.to_numeric, errors='coerce').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "col1    29.0\n",
+       "col2    23.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tots"
    ]
   },
   {
