--- a/pulsenotebook.ipynb
+++ b/pulsenotebook.ipynb
@@ -16,22 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LS_DEMO_URL = 'http://54.172.148.195/index.php/admin/remotecontrol'\n",
+    "LS_DEMO_URL = 'https://tycp.online/index.php/admin/remotecontrol'\n",
     "LS_DEMO_USERNAME = 'user'\n",
     "LS_DEMO_PASSWORD = 'XTJhn349i4Wd'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pulsemanager.lsrc3.session.Session at 0x109553da0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ls = lsrc.Session(LS_DEMO_URL, LS_DEMO_USERNAME, LS_DEMO_PASSWORD)"
+    "ls = lsrc.Session(LS_DEMO_URL, LS_DEMO_USERNAME, LS_DEMO_PASSWORD)\n",
+    "ls"
    ]
   },
   {
@@ -45,9 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ls' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-daa766155a01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#data = ls.export_responses(256283)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ls' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = ls.export_responses(256283)"
    ]
@@ -92750,7 +92774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
