Final About Page Spanish fix.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-23 15:01-0600\n"
-"PO-Revision-Date: 2018-08-23 15:03-0600\n"
+"PO-Revision-Date: 2018-08-23 15:27-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -471,14 +471,14 @@ msgstr ""
 "aplicar a una variedad de entornos de iglesias y grupos pequeños. \n"
 "Miles de pastores y líderes de todo el mundo han encontrado esta herramienta "
 "útil para organizar el ministerio y la misión de la iglesia local. \n"
-"El <a href=‘http://toolbox.multiplicationnetwork.org/'>libro</a> de TPI y la "
+"El <a href='http://toolbox.multiplicationnetwork.org/'>libro</a> de TPI y la "
 "herramienta de diagnóstico forman parte de nuestra ruta Mejores Iglesias. \n"
 "Son más útiles si van acompañados de un compromiso sólido en las "
 "conversaciones. \n"
 "Confiamos en que los hombres y mujeres discutan estos diez signos vitales "
 "serán guiados por el Espíritu Santo\n"
 "para discernir y avanzar hacia un iglesia saludable en cada comunidad.\n"
-"El <a href=‘http://toolbox.multiplicationnetwork.org/'>libro</a> debe ser un "
+"El <a href='http://toolbox.multiplicationnetwork.org/'>libro</a> debe ser un "
 "requisito previo para usar la herramienta de diagnóstico en línea."
 
 #: pulsemanager/templates/pages/about.html:32
