--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-23 15:01-0600\n"
-"PO-Revision-Date: 2018-08-23 17:01-0600\n"
+"PO-Revision-Date: 2018-08-24 11:00-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -371,7 +371,7 @@ msgstr "Sobre"
 
 #: pulsemanager/templates/base.html:51
 msgid "My Profile"
-msgstr "My Profile"
+msgstr "Mi Perfil"
 
 #: pulsemanager/templates/base.html:82
 msgid ""
