Fixed report graph labels again and removed some unused messages (#18).

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-23 15:01-0600\n"
-"PO-Revision-Date: 2018-08-24 11:00-0600\n"
+"PO-Revision-Date: 2018-08-27 15:40-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -2069,50 +2069,44 @@ msgstr "Jerarquía"
 msgid "Denomination"
 msgstr "Denominación"
 
-#~ msgid "Multiplication Network Ministries"
-#~ msgstr "La Red de Multiplicación"
+msgid "Multiplication Network Ministries"
+msgstr "La Red de Multiplicación"
 
-#~ msgid "'http://www.multiplicationnetwork.org'"
-#~ msgstr "‘http://www.reddemultiplicacion.com’"
+msgid "'http://www.multiplicationnetwork.org'"
+msgstr "‘http://www.reddemultiplicacion.com’"
 
-#~ msgid "Welcome to Pulse Manager"
-#~ msgstr "Bienvenido a Pulse Manager"
+msgid "Church"
+msgstr "Iglesia"
 
-#~ msgid "Church"
-#~ msgstr "Iglesia"
+msgid "VISION"
+msgstr "VISIÓN"
 
-#~ msgid "My Info"
-#~ msgstr "Mi Info"
+msgid "Question"
+msgstr "Pregunta"
 
-#~ msgid "VISION"
-#~ msgstr "VISIÓN"
+msgid "LEADERSHIP"
+msgstr "LIDERAZGO"
 
-#~ msgid "Question"
-#~ msgstr "Pregunta"
+msgid "MOBILIZATION"
+msgstr "MOVILIZACIÓN"
 
-#~ msgid "LEADERSHIP"
-#~ msgstr "LIDERAZGO"
+msgid "STEWARDSHIP"
+msgstr "ADMINISTRACIÓN"
 
-#~ msgid "MOBILIZATION"
-#~ msgstr "MOVILIZACIÓN"
+msgid "CONTEXT"
+msgstr "CONTEXTO"
 
-#~ msgid "STEWARDSHIP"
-#~ msgstr "ADMINISTRACIÓN"
+msgid "EVANGELISM"
+msgstr "EVANGELIZACIÓN"
 
-#~ msgid "CONTEXT"
-#~ msgstr "CONTEXTO"
+msgid "DISCIPLESHIP"
+msgstr "DISCIPULADO"
 
-#~ msgid "EVANGELISM"
-#~ msgstr "EVANGELIZACIÓN"
+msgid "SERVICE"
+msgstr "SERVICIO"
 
-#~ msgid "DISCIPLESHIP"
-#~ msgstr "DISCIPULADO"
+msgid "FELLOWSHIP"
+msgstr "COMPAÑERISMO"
 
-#~ msgid "SERVICE"
-#~ msgstr "SERVICIO"
-
-#~ msgid "FELLOWSHIP"
-#~ msgstr "COMPAÑERISMO"
-
-#~ msgid "WORSHIP"
-#~ msgstr "ADORACIÓN"
+msgid "WORSHIP"
+msgstr "ADORACIÓN"
