Changed prerequisit to available.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -427,8 +427,8 @@ msgstr "Tome el pulso de su iglesia (TPI) - Libro"
 #: pulsemanager/templates/pages/about.html:23
 msgid ""
 "\n"
-"The <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>book<a> should be a "
-"prerequisite to using the TYCP online diagnostic tool. It presents Ten Vital Signs of a "
+"The <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>book<a> is available as a "
+"great companion to the TYCP online diagnostic tool. It presents Ten Vital Signs of a "
 "healthy church— Five Key Commitments\n"
 "and Five Key Functions. It then introduces the reader to a church health diagnostic tool can "
 "be applied to a variety of church and small group settings.\n"
@@ -453,8 +453,8 @@ msgstr ""
 "Confiamos en que los hombres y mujeres discutan estos diez signos vitales serán guiados por "
 "el Espíritu Santo\n"
 "para discernir y avanzar hacia un iglesia saludable en cada comunidad.\n"
-"El <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>libro</a> debe ser un "
-"requisito previo para usar la herramienta de diagnóstico en línea."
+"El <a href='http://toolbox.multiplicationnetwork.org/' target='_blank'>libro</a> está disponible "
+"como un gran compañero de la herramienta de diagnóstico en línea TYCP."
 
 #: pulsemanager/templates/pages/about.html:32
 msgid "Take Your Church's Pulse Online Diagnostic Tool"
